# SwiftGUI

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report--code-.md
.github/workflows/: python-publish.yml  release.yaml
Docs/01 Basic tutorials/: 01 Getting-started.md  02 Global options and Themes.md  03 Key-functions.md  04 Elements overview.md  05 Images.md  06 Bigger layouts.md
Docs/02 Element tutorials/: Table.md
Docs/03 Advanced tutorials/: Custom combined elements.md
Examples/: README.md
Examples/Advanced tutorials/: CombinedElementTemplate.py
Examples/Beginner-friendly/: BasicEvents.py  VeryBasicExample.py  _template.py
Templates/: CombinedElements.py  ConfigurationFiles.py  README.md  _GeneralTemplate.py
Tools/: Image_To_Base64.py  Image_To_Icon.py
src/SwiftGUI/: AnyElement.py  Base.py  BasePopup.py  Colors.py  Compat.py  Debug.py  DecoratorKeys.py  ElementFlags.py  Events.py  Examples.py  Fonts.py  GlobalOptions.py  KeyFunctions.py  KeyManager.py  Literals.py  Popups.py  StandardWidgetConfig.py  Themes.py  Tools.py  Widgets.py  WidgetsAdvanced.py  Windows.py  __init__.py
src/SwiftGUI_LeButch/: AnyElement.py  Base.py  (+7 more)
tests/: Images_Tutorial.py  check_executiontimes.py  gimmick_sublayouts.py  git commands_dont_judge.txt  ideas.txt  test input_shrink_or_grow.py  test_ColorChoser.py  test_CombinedElements.py  test_Fileview.py  test_Images.py  test_Listbox.py  test_Notebook.py  test_Radio.py  test_TextField.py  test_Windows.py  test_form.py  test_inspect.py  test_themes.py  test_typing.py  tutorial.py  tutorial_tables.py
(+103 files in other folders)
