[project]
name = "SwiftGUI_LeButch"
version = "0.0.1"
authors = [
  { name="Eric aka LeButch", email="cheesecaketv53+pypi@gmail.com" },
]
description = "An easy-to-use package for creating and using simple GUIs"
readme = "README.md"
#requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
#
[project.urls]
Homepage = "https://github.com/CheesecakeTV/SwiftGUI"
issues = "https://github.com/CheesecakeTV/SwiftGUI/issues"